@@ -1,8 +1,11 @@
 1.6.1 - 201905xx
 ================
 
+Broker:
+- Document `memory_limit` option.
+
 Clients:
-- Fix compilation on musl C systems due to missing sys/time.h header.
+- Fix compilation on non glibc systems due to missing sys/time.h header.
 
 
 1.6 - 20190417
